<resources>
    <string name="app_name">Calculator</string>
    <string name="calculator">Calculator</string>
    <string name="_0">0</string>
    <string name="Comma">.</string>
    <string name="equal">=</string>
    <string name="_1">1</string>
    <string name="ac">AC</string>
    <string name="del">DEL</string>
    <string name="divide">÷</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
</resources>