<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleCalculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculator"
        android:textSize="30sp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
       />

    <TextView
        android:id="@+id/inputText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/_0"
        android:textSize="24sp"
        android:gravity="end|center_vertical"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleCalculator" />

    <GridLayout
        android:id= "@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="5"
        android:columnCount="4"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputText" >

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="80dp"
            android:textSize="30sp"
            android:text="@string/ac"
            android:id="@+id/eraseBtn"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="80dp"
            android:textSize="30sp"
            android:text="@string/del"
            android:id="@+id/deleteBtn"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="2"
            android:layout_gravity="fill_horizontal"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="80dp"
            android:textSize="30sp"
            android:text ="@string/divide"
            android:id="@+id/divideBtn"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="80dp"
            android:textSize="30sp"
            android:text="@string/_7"
            android:id="@+id/sevenBtn"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="80dp"
            android:textSize="30sp"
            android:text="@string/_8"
            android:id="@+id/eightBtn"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="80dp"
            android:textSize="30sp"
            android:text="@string/_9"
            android:id="@+id/nineBtn"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="80dp"
            android:textSize="30sp"
            android:text="x"
            android:id="@+id/multiplyBtn"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="80dp"
            android:textSize="30sp"
            android:text="4"
            android:id="@+id/fourBtn"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="80dp"
            android:textSize="30sp"
            android:text="5"
            android:id="@+id/fiveBtn"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="80dp"
            android:textSize="30sp"
            android:text="6"
            android:id="@+id/sixBtn"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="80dp"
            android:textSize="30sp"
            android:text="-"
            android:id="@+id/subtractBtn"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="80dp"
            android:textSize="30sp"
            android:text="@string/_1"
            android:id="@+id/oneBtn"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="80dp"
            android:textSize="30sp"
            android:text="2"
            android:id="@+id/twoBtn"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="80dp"
            android:textSize="30sp"
            android:text="3"
            android:id="@+id/threeBtn"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="80dp"
            android:textSize="30sp"
            android:text="+"
            android:id="@+id/addBtn"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="80dp"
            android:textSize="30sp"
            android:text="@string/_0"
            android:id="@+id/zeroBtn"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_columnWeight="2"
            android:layout_gravity="fill_horizontal"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="80dp"
            android:textSize="30sp"
            android:text="@string/Comma"
            android:id="@+id/commaBtn"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="80dp"
            android:textSize="30sp"
            android:text="@string/equal"
            android:id="@+id/equalBtn"
            android:layout_row="4"
            android:layout_column="3"
            android:layout_columnWeight="1"/>

    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>